# pyfakerator

./: .gitignore  .pinact.yaml  CHANGELOG.md  README.md  aqua.yaml  pyproject.toml  renovate.json  renovate.json5
.github/release-please/: .manifest.json  config.json
.github/workflows/: lint-and-test.yaml  release-main.yaml  wc-python-test.yaml  wc-rust-test.yaml
examples/: README.md  pyproject.toml
examples/src/: service.py
examples/src/schema/: articles.py  user.py
examples/src/testing/fakerator/schema/: articles.py  user.py
examples/src/testing/fauxgen/schema/: articles.py  user.py
examples/tests/: test_service.py
fakerator-core/: CHANGELOG.md  Cargo.toml  askama.toml
fakerator-core/resources/generator/render_factory_code_from_file/: pandera_all_fields_expected  pandera_all_fields_expected.py  pandera_field_parameters_expected  pandera_field_parameters_expected.py
fakerator-core/resources/generator/write_factory_codes/expected/: foo.py
fakerator-core/resources/generator/write_factory_codes/expected/bar/: __init__.py
fakerator-core/resources/generator/write_factory_codes/input/: foo.py
fakerator-core/src/: fields.rs  generator.rs  lib.rs  main.rs  strings.rs
fakerator-core/src/factories/: pandera.rs
fakerator-core/templates/: pandera_factory.py  pandera_factory.py.tpl
fauxgen-core/: CHANGELOG.md  Cargo.toml  askama.toml
fauxgen-core/resources/: pyproject.toml
fauxgen-core/resources/generator/render_factory_code_from_file/: no_render_code.py  pandera_all_fields_expected.py  pandera_all_fields_input.py  pandera_field_parameters_expected.py  pandera_field_parameters_input.py
fauxgen-core/resources/generator/write_factory_codes/expected/: foo.py
fauxgen-core/resources/generator/write_factory_codes/expected/bar/: __init__.py
fauxgen-core/resources/generator/write_factory_codes/input/bar/: __init__.py  invalid_code.py
fauxgen-core/src/: fields.rs  generator.rs  main.rs
fauxgen-core/src/factories/: mod.rs  pandera.rs
fauxgen-core/templates/: pandera_factory.py.tpl
python/fakerator/: __init__.py  generator.py  unset.py
python/fauxgen/: __init__.py
tests/: test_unset.py
