[project]
dependencies = [
  "pandera[mypy]>=0.23.1",
  "fauxgen",
]
description = "examples projects for fauxgen"
name = "examples"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.sources]
fauxgen = {path = "../", editable = true}

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]
