[package]
name = "fakerator-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
regex = "1.11.1"
rustpython-parser = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
tempfile = "3.19.1"
