[package]
edition = "2021"
name = "fakerator-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
clap = {version = "4.0", features = ["derive"]}
clap_complete = "4.5.47"
regex = "1.11.1"
rustpython-parser = "0.4.0"

[[bin]]
name = "fakerator"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
tempfile = "3.19.1"
